Changing website name

--- a/404.html
+++ b/404.html
@@ -34,9 +34,9 @@
     <meta property="og:type" content="blog">
     <meta property="og:title" content="404 Page not found">
     <meta property="og:url" content="">
-    <meta property="og:site_name" content="Ivy Fibonacci">
+    <meta property="og:site_name" content="zentechnista">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Ivy Fibonacci">
+    <meta name="twitter:title" content="zentechnista">
     <meta name="twitter:description" content="&#34;I have not failed. I&#39;ve just found 10,000 ways that will not work.&#34; ~ Thomas Edison">
     
       <meta name="twitter:creator" content="@zentechnista">
